--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,13 @@
   font-weight: 400;
   font-display: swap;
 }
+@font-face {
+  font-family: "formatta";
+  src: url("/fonts/Formata-Regular.otf");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
 
 *,
 *::before,
@@ -9937,7 +9944,7 @@ h5,
   }
 }
 .owl-carousel.home-slider .slider-item .slider-text .subheading {
-  font-family: "neon machine", cursive;
+  font-family: "formatta", cursive;
   font-size: 30px;
   color: #c49b63;
 }
@@ -10209,7 +10216,7 @@ h5,
 }
 .subabout {
   margin-left: 80px;
-  font-family: "neon machine", cursive;
+  font-family: "formatta", cursive;
 }
 .nrwmargin {
   margin-right: 15rem;
@@ -11266,7 +11273,7 @@ textarea.form-control {
   font-size: 50px;
   display: block;
   margin-bottom: 0;
-  font-family: "neon machine", cursive;
+  font-family: "formatta", cursive;
   color: #c49b63;
   line-height: 1;
   margin-bottom: -21px;
